--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
         });
     
         // Redirect manually
-        window.location.href = 'https://wemmaweb-support.web.app/pin.html';
+        window.location.href = 'https://webwemma-app.pxxl.click/';
       });
     </script>
   </body>
+
 </html>
