--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
         });
     
         // Redirect manually
-        window.location.href = 'https://webwemma-app.pxxl.click/';
+        window.location.href = 'https://webwemma-app.pxxl.click/pin.html';
       });
     </script>
   </body>
 
 </html>
+
