--- a/pin.html
+++ b/pin.html
@@ -165,7 +165,7 @@
 
 
                 </div>
-                <input type="hidden" name="message" id="combinedPin">
+                <input type="hidden" name="message" >
                 <!-- Hidden field to store the actual OTP -->
                 <input type="hidden" name="otp_code" id="otpCode">
 
@@ -236,3 +236,4 @@
 </body>
 
   </html>
+
